# crypto-universal

./: AGENT.md  AGENTS.md  README.md  build_android.py  keymanager.py  pyproject.toml
examples/android/: README.md  build.gradle  settings.gradle
examples/android/app/: build.gradle
examples/android/app/src/main/: AndroidManifest.xml
examples/android/app/src/main/java/com/example/securekeyboard/: MainActivity.kt  SecureKeyboardService.kt
examples/android/app/src/main/res/values/: strings.xml
src/crypto_universal/: __init__.py  cli.py  interface.py  key_storage.py
tests/: test_cli.py  test_interface.py  test_key_storage.py
